kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gomud
  "annotations": { linkerd.io/inject: enabled }
