kubernetes/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-db-postgres
  namespace: gomud
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: db-postgres
  template:
    metadata:
      labels:
        app: db-postgres
    spec:
      containers:
        - name: postgres
          image: postgres-init:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: gomud
  name: service-db-postgres
  labels:
    app: db-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: db-postgres
