kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: gomud
spec:
  type: ClusterIP
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-mud
  namespace: gomud
spec:
  type: ClusterIP
  selector:
    app: app-mud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-user
  namespace: gomud
spec:
  type: ClusterIP
  selector:
    app: app-user
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
